--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- SEO Meta description -->
     <meta name="description"
-          content="BizBite corporate business template or agency and marketing template helps you easily create websites for your business.">
+          content="Probasal Technologies is a product & Service based company.">
     <meta name="author" content="ThemeTags">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -20,10 +20,10 @@
     <meta property="og:type" content="article"/>
 
     <!--title-->
-    <title>CorporX Corporate and Business HTML Template</title>
+    <title>Probasal Technologies</title>
 
     <!--favicon icon-->
-    <link rel="icon" href="img/favicon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="img/favicon.ico" type="image/png" sizes="16x16">
 
     <!--google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700%7COpen+Sans:400,600&amp;display=swap" rel="stylesheet">
@@ -100,51 +100,24 @@
             </button>
             <div class="collapse navbar-collapse h-auto" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto menu">
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"> Home</a>
+                    <li><a  href="index.html">Home</a></li>
+                    <li><a  href="#">About Us</a></li>
+                    <li class="dropdown"><a  href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
                         <ul class="sub-menu dropdown-menu">
-                            <li><a href="index-2.html">Home Page 01</a></li>
-                            <li><a href="index-3.html">Home Page 02</a></li>
-                            <li><a href="index-4.html">Home Page 03</a></li>
-                            <li><a href="index-5.html">Home Page 04</a></li>
-                            <li><a href="index-6.html">Home Page 05</a></li>
-                            <li><a href="index-7.html">Home Page 06</a></li>
+                            <li><a href="#">Web Design</a></li>
+                            <li><a href="#">Web Development</a></li>
+                            <li><a href="#">ERP / CRM Software</a></li>
+                            <li><a href="#">Visual Aid Design</a></li>
+                            <li><a href="#">Logo Design</a></li>
                         </ul>
                     </li>
-                    <li><a  href="about-us.html">About Us</a></li>
-                    <li><a  href="services.html">Services</a></li>
-                    <li class="dropdown"><a  href="#" class="dropdown-toggle" data-toggle="dropdown">Pages</a>
+                    <li class="dropdown"><a  href="#" class="dropdown-toggle" data-toggle="dropdown">Our Products</a>
                         <ul class="sub-menu dropdown-menu">
-                            <li><a href="team.html">Our Team Members</a></li>
-                            <li><a href="team-single.html">Team Member Profile</a></li>
-                            <li><a href="project-details.html">Project Details </a></li>
-                            <li><a href="services-details.html">Services Details</a></li>
-                            <li><a href="basic-login.html">Login Page 1</a></li>
-                            <li><a href="login.html">Login Page 2</a></li>
-                            <li><a href="basic-sign-up.html">Signup Page 1</a></li>
-                            <li><a href="sign-up.html">Signup Page 2</a></li>
-                            <li><a href="password-reset.html">Reset Password</a></li>
-                            <li><a href="change-password.html">Change Password</a></li>
-                            <li><a href="download.html">Download Page</a></li>
-                            <li><a href="review.html">Review Page</a></li>
-                            <li><a href="faq.html">FAQ Page</a></li>
-                            <li><a href="404.html">404 Page</a></li>
-                            <li><a href="coming-soon.html">Coming Soon</a></li>
-                            <li><a href="thank-you.html">Thank You Page</a></li>
+                            <li><a href="#">Logistics CRM</a></li>
+                            <li><a href="#">Real Estate CRM</a></li>
                         </ul>
                     </li>
-                    <li><a  href="project.html">Project</a></li>
-                    <li class="dropdown"><a  href="#" class="dropdown-toggle" data-toggle="dropdown">Blog</a>
-                        <ul class="sub-menu dropdown-menu">
-                            <li><a href="blog-default.html">Blog Grid</a></li>
-                            <li><a href="blog-no-sidebar.html">Blog No Sidebar</a></li>
-                            <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                            <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                            <li><a href="blog-right-sidebar-2.html">Blog Right Sidebar 02</a></li>
-                            <li><a href="blog-single-left-sidebar.html">Details Left Sidebar</a></li>
-                            <li><a href="blog-single-right-sidebar.html">Details Right Sidebar</a></li>
-                        </ul>
-                    </li>
-                    <li><a  href="contact-us.html">Contact Us</a></li>
+                    <li><a  href="#">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -159,14 +132,14 @@
     <section class="hero-equal-height pt-165 pb-100 gradient-overly-right-light" style="background: url('img/hero-bg4.jpg')no-repeat center center / cover">
         <div class="container">
             <div class="row">
-                <div class="col-md-7 col-lg-6">
+                <div class="col-md-6 col-lg-7">
                     <div class="hero-slider-content">
-                        <span class="text-uppercase">Total Business Solutions</span>
+                        <span class="text-uppercase">Total Solutions For Your Business Need</span>
                         <h1>Welcome To Probasal Technologies</h1>
-                        <p class="lead">Holisticly procrastinate mission-critical convergence with reliable customer service. Assertively underwhelm idea-sharing for impactful solutions. </p>
+                        <p class="lead header-lead">We will help you find out all solutions related to web services. Serving people for more than years it’s our job to convince you that you are at the right place and with us.</p>
 
                         <div class="action-btns mt-3">
-                            <a href="#" class="btn secondary-solid-btn">Get Start Now</a>
+                            <a href="#" class="btn secondary-solid-btn">Explore Our Products</a>
                         </div>
                     </div>
                 </div>
@@ -223,14 +196,13 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-md-12 col-lg-6">
                     <div class="video-promo-content mb-md-4 mb-lg-0">
-                        <h2>Corporate Agency for Your Business Solutions</h2>
-                        <p class="lead">Interactively develop timely niche markets before extensive imperatives. Professionally
-                            repurpose strategies.</p>
+                        <h2>Digital Agency for Your Business Solutions</h2>
+                        <p class="lead">Probasal Technologies comprise a team of enthusiastic entrepreneurs who constantly work and focus on quality, innovation, & technology.</p>
                         <ul class="list-unstyled tech-feature-list">
                             <li class="py-1"><span class="ti-control-forward mr-2 color-secondary"></span><strong>Creative</strong> Websites Design</li>
-                            <li class="py-1"><span class="ti-control-forward mr-2 color-secondary"></span><strong>Accounting</strong> Procedures Guidebook</li>
-                            <li class="py-1"><span class="ti-control-forward mr-2 color-secondary"></span><strong>Cost</strong> Accounting Fundamentals</li>
-                            <li class="py-1"><span class="ti-control-forward mr-2 color-secondary"></span><strong>SEO</strong> Optimization Services</li>
+                            <li class="py-1"><span class="ti-control-forward mr-2 color-secondary"></span><strong>Web App</strong> Development</li>
+                            <li class="py-1"><span class="ti-control-forward mr-2 color-secondary"></span><strong>ERP / CRM</strong> Software</li>
+                            <li class="py-1"><span class="ti-control-forward mr-2 color-secondary"></span><strong>Visual Aid</strong> Design</li>
                         </ul>
                         <div class="action-btns mt-4">
                             <a href="#" class="btn primary-solid-btn mr-2">View Our Services</a>
