--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <div class="main">
 
     <!--hero section start-->
-    <section class="hero-equal-height pt-165 pb-100 gradient-overly-right-light" style="background: url('img/hero-bg4.jpg')no-repeat center center / cover">
+    <section class="hero-equal-height pt-165 pb-100 gradient-overly-right-light" style="background: url('img/hero-bg.png')no-repeat top right">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-7">
