--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <!--about us section end-->
 
     <!--services section start-->
-    <section class="services-section ptb-100 gray-light-bg">
+    <!-- <section class="services-section ptb-100 gray-light-bg">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
@@ -308,11 +308,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--services section end-->
 
     <!--promo section start-->
-    <section class="promo-section gradient-bg ptb-100">
+    <!-- <section class="promo-section gradient-bg ptb-100">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-9 col-lg-8">
@@ -356,11 +356,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--promo section end-->
 
     <!--our work or portfolio section start-->
-    <section class="our-portfolio-section ptb-100">
+    <!-- <section class="our-portfolio-section ptb-100">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -459,11 +459,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--our work or portfolio section end-->
 
     <!--blog section start-->
-    <section class="our-blog-section ptb-100 gray-light-bg">
+    <!-- <section class="our-blog-section ptb-100 gray-light-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -551,11 +551,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--blog section end-->
 
     <!--testimonial section start-->
-    <section class="testimonial-section ptb-100">
+    <!-- <section class="testimonial-section ptb-100">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-9 col-lg-8">
@@ -652,12 +652,12 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
     <!--testimonial section end-->
 
 
     <!--team two section start-->
-    <section class="team-two-section ptb-100 gray-light-bg">
+    <!-- <section class="team-two-section ptb-100 gray-light-bg">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-8">
@@ -784,11 +784,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--team two section end-->
 
     <!--call to action section start-->
-    <section class="call-to-action py-5">
+    <!-- <section class="call-to-action py-5">
         <div class="container">
             <div class="row justify-content-around align-items-center">
                 <div class="col-md-7">
@@ -804,7 +804,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--call to action section end-->
 
 </div>
@@ -814,7 +814,7 @@
 <!--footer section start-->
 <footer class="footer-section">
     <!--footer top start-->
-    <div class="footer-top gradient-bg">
+    <!-- <div class="footer-top gradient-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
@@ -914,11 +914,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--footer top end-->
 
     <!--footer copyright start-->
-    <div class="footer-bottom gray-light-bg py-2">
+    <!-- <div class="footer-bottom gray-light-bg py-2">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md-5 col-lg-5">
@@ -947,7 +947,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--footer copyright end-->
 </footer>
 <!--footer section end-->
