Scroll Top hidden

--- a/index.html
+++ b/index.html
@@ -953,9 +953,9 @@
 <!--footer section end-->
 
 <!--bottom to top button start-->
-<button class="scroll-top scroll-to-target" data-target="html">
+<!-- <button class="scroll-top scroll-to-target" data-target="html">
     <span class="ti-angle-up"></span>
-</button>
+</button> -->
 <!--bottom to top button end-->
 
 
